<resources>
    <string name="facebook_app_id">242510262997142</string>
    <string name="fb_login_protocol_scheme">fb242510262997142</string>
    <string name="app_name">Counter App</string>
    <string name="fb_login">lOGIN WITH FACEBOOK</string>
    <string name="google_login">LOGIN WITH GOOGLE</string>
    <string name="txt_hindu">Hindu</string>
    <string name="txt_muslim">Muslim</string>
    <string name="txt_christian">Christian</string>
    <string name="txt_didntfind_religion">Did\'t find Religion , Let us Know</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="avialble_chants">Available Chants</string>
    <string name="rate_text">Rate Our App</string>
    <string name="share_text">Share This App</string>
    <string name="help_text">Help us</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_chant_name">Chant Name</string>
    <string name="txt_chant">Chant</string>
    <string name="txt_public">Public</string>
    <string name="txt_friend">Friends</string>
    <string name="txt_private">Private</string>
    <string name="txt_save">Save</string>
    <string name="txt_add_chant">Add Chants</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_surname">Surname</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_fname">First Name</string>
    <string name="txt_subject">Subject</string>
    <string name="txt_mothername">Mother\'s Name</string>
    <string name="txt_nodataFound">No Data Found</string>
    <string name="txt_lname">Last Name</string>
    <string name="txt_fathersname">Father\'s Name</string>
    <string name="txt_gothra">Gothra</string>
    <string name="txt_birthday">Birth Date</string>
    <string name="txt_html"><h1>Birth Date</h1></string>
    <string name="txt_aniversary">Anniversary Date</string>
    <string name="txt_help">How do you want to help us</string>
    <string name="txt_send">Send</string>
    <string name="txt_yes">YES</string>
    <string name="txt_no">NO</string>
    <string name="txt_helpnote">Give us details...</string>
    <string name="gplus_key">AIzaSyCEcs8K0fXV2dxZBJhQJYyMgPvNKGT7T0w</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="people_joined">People Joined</string>
    <string name="local_count">Local Count</string>
    <string name="my_contribution">My Contribution</string>

    <string name="title_activity_fullscreen">RegistrationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
