<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <com.example.mypc.counterapp.Fonts.EditTextRegular
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rectangleshape"
                    android:hint="@string/txt_name"
                    android:imeOptions="actionNext"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:paddingLeft="5dp" />

                <com.example.mypc.counterapp.Fonts.EditTextRegular
                    android:id="@+id/edit_surname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/edit_name"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangleshape"
                    android:hint="@string/txt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="5dp" />

                <com.example.mypc.counterapp.Fonts.EditTextRegular
                    android:id="@+id/edit_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/edit_surname"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangleshape"
                    android:hint="@string/txt_phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingLeft="5dp" />

                <com.example.mypc.counterapp.Fonts.EditTextRegular
                    android:id="@+id/edit_subject"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/edit_firstname"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rectangleshape"
                    android:hint="@string/txt_subject"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="10"
                    android:paddingLeft="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp">

                <com.example.mypc.counterapp.Fonts.TextViewBold
                    android:id="@+id/text_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_help"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <com.example.mypc.counterapp.Fonts.EditTextRegular
                    android:id="@+id/edit_help"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_below="@+id/text_help"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangleshape"
                    android:gravity="top"
                    android:hint="@string/txt_helpnote"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:overScrollMode="always"
                    android:paddingLeft="5dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical" />
            </RelativeLayout>

            <com.example.mypc.counterapp.Fonts.ButtonBold
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="@drawable/ovalshape_orange"
                android:text="@string/txt_send"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>